# ISU

./: .gitignore  README.md  pyproject.toml
config/: local.env.example  source_profiles.json
data/: reimport_old_isu_anchor_name_club_urls.txt  reimport_old_isu_club_nation_points_urls.txt  reimport_old_isu_club_nation_segment_urls.txt
db/: 00_create_database_and_user.sql  01_ingest_schema.sql  02_seed_source_profiles.sql  03_seed_validation_legend.sql  04_validate_representation_rules.sql  05_allow_event_reimports.sql  06_source_url_registry.sql  07_validate_missing_results_against_entries.sql  08_mlad_figurist_test_results.sql  09_seed_denkova_2020_2024_urls.sql  10_validate_skater_name_quality.sql  11_seed_bsf_source_profiles.sql  12_allow_duplicate_segment_names.sql  13_duplicate_import_audit.sql  14_delete_duplicate_import_runs.sql  15_skater_multi_competition_comparison.sql  16_event_profile_representation_rules.sql  17_analytics_views.sql  18_validate_affiliation_quality.sql  19_club_registry.sql  20_validate_category_result_quality.sql  21_star_mart_views.sql  22_source_archive_manifest.sql  23_event_discovery_catalog.sql  24_validate_mart_and_discovery.sql  25_seed_isu_external_source_profiles.sql  README.md  psql_local.sh  setup_remote_database.sh  validation_queries.sql
docs/: analytics-and-discovery-strategy.md  current-state.md  european-source-discovery-playbook.md  next-db-actions.md  platform-version-reuse.md  source-model.md
isu_parser/: __init__.py  fs_manager.py  local_config.py  old_isucalcfs.py  pdf_scores.py  source_check.py  source_profiles.py
(+21 files in other folders)
