[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "isu-skating-data"
version = "0.1.0"
description = "Parsers and validators for ISU figure skating result sources."
requires-python = ">=3.11"
dependencies = ["beautifulsoup4>=4.12", "psycopg[binary]>=3.2"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
pdf = ["pypdf>=5.0", "pdfplumber>=0.11"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
